Updates sample spacing and fixes bug

--- a/src/app/kit/kit.component.scss
+++ b/src/app/kit/kit.component.scss
@@ -7,7 +7,7 @@ mat-form-field {
 .kit {
     display: block;
     margin: 2rem auto 0;
-    width: 416px;
+    width: 512px;
 }
 
 .kit-info {
