--- a/src/app/samples/samples.component.scss
+++ b/src/app/samples/samples.component.scss
@@ -1,7 +1,7 @@
 .samples {
     display: block;
     margin: 0 auto;
-    width: 208px;
+    width: 256px;
 
     .bank-samples {
         display: flex;
